--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "anthropic>=0.49.0",
     "autogen-agentchat>=0.4.9.2",
     "autogen-ext[grpc,mcp,ollama,openai]>=0.4.9.2",
+    "bitwarden-sdk>=1.0.0",
     "bs4>=0.0.2",
     "google-adk>=1.18.0",
     "google-genai>=1.50.1",
@@ -26,6 +27,7 @@ dependencies = [
     "mcp[cli]>=1.5.0",
     "openai>=1.68.2",
     "openai-agents>=0.0.15",
+    "perplexityai>=0.22.2",
     "playwright>=1.51.0",
     "plotly>=6.0.1",
     "polygon-api-client>=1.14.5",
