Done week4 labs

--- a/3_crew/engineering_team/pyproject.toml
+++ b/3_crew/engineering_team/pyproject.toml
@@ -5,7 +5,7 @@ description = "engineering_team using crewAI"
 authors = [{ name = "Your Name", email = "you@example.com" }]
 requires-python = ">=3.10,<3.13"
 dependencies = [
-    "crewai[tools]>=0.108.0,<1.0.0",
+    "crewai[anthropic,tools]>=0.108.0,<1.0.0",
     "gradio>=5.22.0",
 ]
 
