--- a/3_crew/stock_picker_sr/src/stock_picker_sr/config/tasks.yaml
+++ b/3_crew/stock_picker_sr/src/stock_picker_sr/config/tasks.yaml
@@ -1,6 +1,8 @@
 find_trending_companies:
   description: >
-    Find the top trending companies in the news in {sector} by searching the latest news. Find new companies that you've not found before.
+    Find the top trending companies in the news in {sector} by searching the latest news. 
+    Find new companies that you've not found before. 
+    Prefer publically traded companies over private ones.
   expected_output: >
     A list of trending companies in {sector}
   agent: trending_company_finder
