--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "gradio>=5.22.0",
     "httpx>=0.28.1",
     "ipywidgets>=8.1.5",
+    "langchain>=1.2.3",
     "langchain-anthropic>=0.3.10",
     "langchain-community>=0.3.20",
     "langchain-experimental>=0.3.4",
